BradkenProduction/force-app/main/default/objects/Sales_Target__c/Sales_Target__c.object-meta.xml
<CustomObject>
    <description>Sales Rep&apos;s Sales Targets</description>
    <label>Sales Target</label>
    <nameField>
        <label>Sales Target Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Targets</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>