BradkenProduction/force-app/main/default/objects/Sales_Target__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account Name</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Targets</relationshipLabel>
    <relationshipName>Sales_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>