BradkenProduction/force-app/main/default/objects/Sales_Target__c/fields/Actual_AUD_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Actual_AUD_Exchange_Rate__c</fullName>
    <inlineHelpText>AUD Exchange rate for actual values</inlineHelpText>
    <label>Actual AUD Exchange Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>