BradkenProduction/force-app/main/default/objects/Sales_Target__c/fields/Actual_Margin__c.field-meta.xml
<CustomField>
    <fullName>Actual_Margin__c</fullName>
    <label>Actual Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>