BradkenProduction/force-app/main/default/objects/Sales_Target__c/fields/Actual_MarginPercentage__c.field-meta.xml
<CustomField>
    <fullName>Actual_MarginPercentage__c</fullName>
    <formula>Actual_Margin__c / Actual_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Margin %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>