BradkenProduction/force-app/main/default/objects/Sales_Target__c/fields/Actual_Order_Intake__c.field-meta.xml
<CustomField>
    <fullName>Actual_Order_Intake__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Actual Order Intake</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>