BradkenProduction/force-app/main/default/objects/Sales_Target__c/fields/Actual_Order_Intake_AUD__c.field-meta.xml
<CustomField>
    <fullName>Actual_Order_Intake_AUD__c</fullName>
    <label>Actual Order Intake AUD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>