BradkenProduction/force-app/main/default/objects/Sales_Target__c/fields/Alternate_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Product_Group__c</fullName>
    <label>Alternate Product Group</label>
    <length>50</length>
    <type>Text</type>
</CustomField>