BradkenProduction/force-app/main/default/objects/Sales_Target__c/fields/Budget_Period__c.field-meta.xml
<CustomField>
    <fullName>Budget_Period__c</fullName>
    <label>Budget Period</label>
    <type>Date</type>
</CustomField>