BradkenProduction/force-app/main/default/objects/Sales_Target__c/fields/Budgeted_AUD_Exchange_Rate__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_AUD_Exchange_Rate__c</fullName>
    <inlineHelpText>AUD Exchange rate for budgeted values</inlineHelpText>
    <label>Budgeted AUD Exchange Rate</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>