BradkenProduction/force-app/main/default/objects/Sales_Target__c/fields/Budgeted_Margin__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Margin__c</fullName>
    <label>Budgeted Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>