BradkenProduction/force-app/main/default/objects/Sales_Target__c/fields/Budgeted_Margin_AUD__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Margin_AUD__c</fullName>
    <label>Budgeted Margin AUD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>