BradkenProduction/force-app/main/default/objects/Sales_Target__c/fields/Budgeted_MarginPercentage__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_MarginPercentage__c</fullName>
    <formula>Budgeted_Margin__c / Budgeted_Sales__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budgeted Margin %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>