BradkenProduction/force-app/main/default/objects/Sales_Target__c/fields/Budgeted_Order_Intake__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Order_Intake__c</fullName>
    <label>Budgeted Order Intake</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>