BradkenProduction/force-app/main/default/objects/Sales_Target__c/fields/Budgeted_Sales__c.field-meta.xml
<CustomField>
    <fullName>Budgeted_Sales__c</fullName>
    <label>Budgeted Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>