BradkenProduction/force-app/main/default/objects/Sales_Target__c/fields/Sales_Class__c.field-meta.xml
<CustomField>
    <fullName>Sales_Class__c</fullName>
    <label>Sales Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>