BradkenProduction/force-app/main/default/objects/Sales_Target__c/fields/Sales_Region__c.field-meta.xml
<CustomField>
    <fullName>Sales_Region__c</fullName>
    <label>Sales Region</label>
    <length>70</length>
    <type>Text</type>
</CustomField>