BradkenProduction/force-app/main/default/objects/Sales_Target__c/fields/Unibis_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Unibis_Account_Number__c</fullName>
    <formula>Account__r.Unibis_Account_No__c</formula>
    <label>Unibis Account Number</label>
    <type>Text</type>
</CustomField>