BradkenProduction/force-app/main/default/objects/Sales_Target__c/recordTypes/Targets.recordType-meta.xml
<RecordType>
    <fullName>Targets</fullName>
    <active>true</active>
    <description>Target Record Type</description>
    <label>Targets</label>
</RecordType>