BradkenProduction/force-app/main/default/objects/Sales_Target__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Unibis_Account_Number__c</columns>
    <columns>Actual_Order_Intake_AUD__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Budget_Period__c</columns>
    <columns>Actual_Sales__c</columns>
    <columns>Actual_Margin__c</columns>
    <columns>Budgeted_Sales__c</columns>
    <columns>Budgeted_Margin__c</columns>
    <columns>Business_Unit__c</columns>
    <columns>Sales_Region__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>